# ip-reporter

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
client/: client.py
server/: main.py
server/static/: index.html
